# statements-ai

./: .gitignore  render.yaml
bank-statements-api/: .env  .env.example  .env.production  .env.test  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
bank-statements-api/alembic/: env.py
bank-statements-api/alembic/versions/: 0001_create_transactions.py
bank-statements-api/bank_statements_api/: cors.py  database.py  main.py  models.py
bank-statements-api/bank_statements_api/api/: transactions.py
bank-statements-api/src/: main.py
bank-statements-api/src/api/: transactions.py
bank-statements-api/tests/: test_transactions.py
bank-statements-web/: .env.development.local  .env.example  .env.production  .env.test  .eslintrc.json  README.md  index.html  package-lock.json  package.json  tsconfig.json
bank-statements-web/src/: main.tsx
bank-statements-web/src/pages/: TransactionsPage.tsx
bank-statements-web/src/types/: transaction.ts
bank-statements-web/tests/: transactions.test.tsx
docs/: 1. Project_description.md  2.Architecture.md  3. Steel_Thread.md
scripts/utils/: add-transaction.sh
