[project]
name = "bank-statements-api"
version = "0.1.0"
description = "FastAPI backend for Bank Statements Steel Thread"
authors = [
  { name = "Your Name", email = "your@email.com" }
]
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry]
packages = [
  { include = "bank_statements_api" }
]

[tool.poetry.dependencies]
fastapi = "^0.110.0"
pydantic = "^2.11.3"
asyncpg = "^0.29.0"
SQLAlchemy = "^2.0.29"
psycopg = {extras = ["binary"], version = "^3.1.18"}
python-dotenv = "^1.0.1"
uvicorn = "^0.34.2"
greenlet = "^3.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
httpx = "^0.28.1"
pytest-asyncio = "^0.23.6"
alembic = "^1.15.2"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
